<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="300dp"
        android:layout_height="168dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/background_dark"
        android:fontFamily="@font/allerta_stencil"
        android:shadowColor="#3DB61B"
        android:text="@string/enter_your_details"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:text=""
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:text=""
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:text=""
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:text=""
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signup_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_password_again"
        android:inputType="textPassword"
        android:text=""
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:autofillHints="" />

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_terms_and_conditions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/allerta_stencil"
            android:padding="17dp"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>
    </ScrollView>


</RelativeLayout>